--- a/src/main/resources/ViewController/CreateEdit.fxml
+++ b/src/main/resources/ViewController/CreateEdit.fxml
@@ -5,9 +5,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="1.7976931348623157E308"
-            minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="459.0" prefWidth="805.0" xmlns="http://javafx.com/javafx/8"
-            fx:controller="ViewController.CreateEditController">
+            minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="805.0"
+            xmlns="http://javafx.com/javafx/8" fx:controller="ViewController.CreateEditController">
     <center>
         <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
                   minWidth="-Infinity" prefHeight="379.0" prefWidth="440.0" BorderPane.alignment="TOP_LEFT">
@@ -144,28 +143,15 @@
                         <Insets bottom="5.0" top="10.0"/>
                     </VBox.margin>
                 </Label>
-                <ScrollPane prefHeight="232.0" prefWidth="234.0" VBox.vgrow="ALWAYS">
-                    <content>
-                        <AnchorPane prefHeight="356.0" prefWidth="291.0">
-                            <children>
-                                <VBox fx:id="PhoneNumberVBox" alignment="TOP_CENTER" prefHeight="230.0"
-                                      prefWidth="211.0" spacing="10.0" AnchorPane.bottomAnchor="0.0"
-                                      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                      AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
-                                    <opaqueInsets>
-                                        <Insets/>
-                                    </opaqueInsets>
-                                </VBox>
-                            </children>
-                            <padding>
-                                <Insets bottom="10.0" left="10.0" top="10.0"/>
-                            </padding>
-                            <opaqueInsets>
-                                <Insets bottom="10.0" top="10.0"/>
-                            </opaqueInsets>
-                        </AnchorPane>
-                    </content>
-                </ScrollPane>
+                <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                    <columns>
+                        <TableColumn prefWidth="75.0" text="Typ"/>
+                        <TableColumn prefWidth="75.0" text="Nummer"/>
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    </columnResizePolicy>
+                </TableView>
                 <HBox alignment="CENTER" prefHeight="36.0" prefWidth="294.0">
                     <children>
                         <Button alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#addPhoneButtonClick"
@@ -175,6 +161,11 @@
                             </HBox.margin>
                         </Button>
                         <Button mnemonicParsing="false" onAction="#RemovePhoneNumber" text="Entfernen">
+                            <HBox.margin>
+                                <Insets left="10.0"/>
+                            </HBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" text="Bearbeiten">
                             <HBox.margin>
                                 <Insets left="10.0"/>
                             </HBox.margin>
