--- a/src/main/resources/ViewController/CreateEdit.fxml
+++ b/src/main/resources/ViewController/CreateEdit.fxml
@@ -4,12 +4,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="1.7976931348623157E308"
-            minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="805.0"
-            xmlns="http://javafx.com/javafx/8" fx:controller="ViewController.CreateEditController">
+<BorderPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="459.0" prefWidth="805.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="ViewController.CreateEditController">
     <center>
-        <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-                  minWidth="-Infinity" prefHeight="379.0" prefWidth="440.0" BorderPane.alignment="TOP_LEFT">
+        <GridPane BorderPane.alignment="TOP_LEFT" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity"
+                  minHeight="-Infinity" minWidth="-Infinity" prefHeight="379.0" prefWidth="440.0">
             <children>
                 <Label text="Vorname">
                     <padding>
@@ -19,7 +19,7 @@
                         <Font name="System Bold" size="13.0"/>
                     </font>
                 </Label>
-                <Label text="Nachname" GridPane.rowIndex="1">
+                <Label GridPane.rowIndex="1" text="Nachname">
                     <GridPane.margin>
                         <Insets left="10.0"/>
                     </GridPane.margin>
@@ -27,7 +27,7 @@
                         <Font name="System Bold" size="13.0"/>
                     </font>
                 </Label>
-                <Label text="Email-Adresse" GridPane.rowIndex="2">
+                <Label GridPane.rowIndex="2" text="Email-Adresse">
                     <GridPane.margin>
                         <Insets left="10.0"/>
                     </GridPane.margin>
@@ -35,22 +35,22 @@
                         <Font name="System Bold" size="13.0"/>
                     </font>
                 </Label>
-                <TextField fx:id="FirstNameBox" GridPane.columnIndex="1">
+                <TextField GridPane.columnIndex="1" fx:id="FirstNameBox">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0"/>
                     </GridPane.margin>
                 </TextField>
-                <TextField fx:id="NameBox" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="NameBox">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0"/>
                     </GridPane.margin>
                 </TextField>
-                <TextField fx:id="MailBox" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="MailBox">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0"/>
                     </GridPane.margin>
                 </TextField>
-                <Label text="Geburtstag" GridPane.rowIndex="6">
+                <Label GridPane.rowIndex="6" text="Geburtstag">
                     <GridPane.margin>
                         <Insets left="10.0"/>
                     </GridPane.margin>
@@ -58,12 +58,12 @@
                         <Font name="System Bold" size="13.0"/>
                     </font>
                 </Label>
-                <DatePicker fx:id="BirthdayDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="6" fx:id="BirthdayDatePicker">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0"/>
                     </GridPane.margin>
                 </DatePicker>
-                <Label text="Str. u. Haus-Nr." GridPane.rowIndex="3">
+                <Label GridPane.rowIndex="3" text="Str. u. Haus-Nr.">
                     <GridPane.margin>
                         <Insets left="10.0"/>
                     </GridPane.margin>
@@ -71,7 +71,7 @@
                         <Font name="System Bold" size="13.0"/>
                     </font>
                 </Label>
-                <Label text="PLZ" GridPane.rowIndex="4">
+                <Label GridPane.rowIndex="4" text="PLZ">
                     <GridPane.margin>
                         <Insets left="10.0"/>
                     </GridPane.margin>
@@ -79,7 +79,7 @@
                         <Font name="System Bold" size="13.0"/>
                     </font>
                 </Label>
-                <Label text="Wohnort" GridPane.rowIndex="5">
+                <Label GridPane.rowIndex="5" text="Wohnort">
                     <font>
                         <Font name="System Bold" size="13.0"/>
                     </font>
@@ -87,17 +87,17 @@
                         <Insets left="10.0"/>
                     </GridPane.margin>
                 </Label>
-                <TextField fx:id="StreetAddressBox" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="StreetAddressBox">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0"/>
                     </GridPane.margin>
                 </TextField>
-                <TextField fx:id="ZipCodeBox" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" fx:id="ZipCodeBox">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0"/>
                     </GridPane.margin>
                 </TextField>
-                <TextField fx:id="CityBox" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" fx:id="CityBox">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0"/>
                     </GridPane.margin>
@@ -122,7 +122,7 @@
         </GridPane>
     </center>
     <bottom>
-        <HBox prefHeight="38.0" prefWidth="602.0" spacing="10.0" BorderPane.alignment="CENTER">
+        <HBox BorderPane.alignment="CENTER" prefHeight="38.0" prefWidth="602.0" spacing="10.0">
             <children>
                 <Button mnemonicParsing="false" onAction="#SaveNewContactClick" text="Speichern"/>
                 <Button mnemonicParsing="false" onAction="#CancelModalClick" text="Abbrechen"/>
@@ -133,7 +133,7 @@
         </HBox>
     </bottom>
     <right>
-        <VBox alignment="BOTTOM_CENTER" prefHeight="421.0" prefWidth="294.0" BorderPane.alignment="CENTER">
+        <VBox BorderPane.alignment="CENTER" alignment="BOTTOM_CENTER" prefHeight="421.0" prefWidth="294.0">
             <children>
                 <Label text="Telefonnummern">
                     <font>
@@ -143,10 +143,10 @@
                         <Insets bottom="5.0" top="10.0"/>
                     </VBox.margin>
                 </Label>
-                <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                <TableView VBox.vgrow="ALWAYS" prefHeight="200.0" prefWidth="200.0" fx:id="PhoneNrTable">
                     <columns>
-                        <TableColumn prefWidth="75.0" text="Typ"/>
-                        <TableColumn prefWidth="75.0" text="Nummer"/>
+                        <TableColumn prefWidth="75.0" text="Typ" fx:id="NrTypeColumn"/>
+                        <TableColumn prefWidth="75.0" text="Nummer" fx:id="NrColumn"/>
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
@@ -165,7 +165,7 @@
                                 <Insets left="10.0"/>
                             </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" text="Bearbeiten">
+                        <Button mnemonicParsing="false" onAction="#editNumberClick" text="Bearbeiten">
                             <HBox.margin>
                                 <Insets left="10.0"/>
                             </HBox.margin>
